syntax = "proto3";

package proto;

option go_package  = "github.com/dogmatiq/example/proto";

// Customer is the GRPC service.
service Customer {
    // Login is a service handler to process LoginRequest.
    rpc Login(LoginRequest) returns (LoginResponse) {}
}

// CustomerLoginRequest is the request initiated by the client to login a
// customer.
message LoginRequest {
    string customer_name = 1;
    string password = 2;
}

// CustomerLoginResponse is the responsed sent by the service to login a
// customer.
message LoginResponse {
    string customer_name = 1;
    string customer_id = 2;
}

